--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	<body>
 			<div class="nav-list">
 				<ul>
-					<li>Omar Daham</li>
-					<li>Home</li>
-					<li>About</li>
+					<li>Omar Daham</li> 
+					<li><a href="index.html">Home</a></li>
+					<li><a href="./about.html">About</a></li>
 					<li>Portfolio</li>
 				</ul>
-			
+				
 			</div>
 		
 		<section>
