--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
 	<body>
 		<div class="nav-list">
 				<ul>
-					<li>Omar Daham</li>
-					<li>Home</li>
-					<li>About</li>
+					<li>Omar Daham</li> 
+					<li><a href="index.html">Home</a></li>
+					<li><a href="./about.html">About</a></li>
 					<li>Portfolio</li>
 				</ul>
 			
