--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 					<li>Omar Daham</li> 
 					<li><a href="index.html">Home</a></li>
 					<li><a href="./about.html">About</a></li>
-					<li>Portfolio</li>
+					<li><a href="./portfolio.html">Portfolio</a></li>
 				</ul>
 				
 			</div>
